# project

PolygonBooleanOperationsVisualizer/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp
PolygonBooleanOperationsVisualizer/include/: BooleanOperations.h
PolygonBooleanOperationsVisualizer/src/: BooleanOperations.cpp  MainWindow.cpp  MainWindow.h
